chore: change gradle build and some strings

--- a/src/main/resources/strings/messages.properties
+++ b/src/main/resources/strings/messages.properties
@@ -47,3 +47,9 @@ sort\n\
 filter gmail.com\n\
 search "Basta"\n\
 stats
+
+emoji.user=[USER]
+emoji.ok=[OK]
+emoji.find=[FIND]
+emoji.stats=[STATS]
+emoji.error=[ERROR]
